set home url set button UI added jquery datatable

--- a/PMS-PropertyHapa.Staff/Views/AccountSubType/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/AccountSubType/Index.cshtml
@@ -53,7 +53,7 @@
                                                     </div>
 
                                                     <div class="right-side-header">
-                                                        <button class="btn btn-primary" id="newAccountSubTypeBtn">New Account Sub Type</button>
+                                                        <button class="btn btn-success" id="newAccountSubTypeBtn">New Account Sub Type</button>
                                                     </div>
 
                                                 </div>
@@ -81,7 +81,7 @@
                                                                         <div class="dropdown-basic">
                                                                             <div class="dropdown">
                                                                                 <div class="btn-group mb-0">
-                                                                                    <button class="dropbtn btn-danger" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
+                                                                                    <button class="dropbtn btn-success" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
                                                                                     <div class="dropdown-content">
                                                                                         <a class="btn btn-secondary" onclick="editAccountSubType(@item.AccountSubTypeId)">
                                                                                             <i class="fa fa-edit"></i> Edit
@@ -136,8 +136,8 @@
                         <input type="text" class="form-control" name="accountSubTypeDescription" id="accountSubTypeDescription" placeholder="Description" required>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary" id="saveBtn">Save</button>
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-success" id="saveBtn">Save</button>
                     </div>
                 </div>
             </form>
