--- a/PMS-PropertyHapa.Staff/Views/Applications/AddApplication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Applications/AddApplication.cshtml
@@ -858,9 +858,9 @@
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-end">
-                        <button type="button" class="btn btn-secondary" id="prevButton">Previous</button>
-                        <button type="button" class="btn btn-primary" id="nextButton">Next</button>
-                        <button type="submit" class="btn btn-primary" id="saveButton" style="display:none;">Save Changes</button>
+                        <button type="button" class="btn btn-danger" id="prevButton">Previous</button>
+                        <button type="button" class="btn btn-success" id="nextButton">Next</button>
+                        <button type="submit" class="btn btn-success" id="saveButton" style="display:none;">Save Changes</button>
                     </div>
                 </div>
             </div>
