--- a/PMS-PropertyHapa.Staff/Views/Assests/AddAssest.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Assests/AddAssest.cshtml
@@ -369,7 +369,7 @@
                                     }
                                 </div>
                                 <div class="mb-3" style="text-align: right; margin-top: 20px;">
-                                    <a href="javascript:void(0);" class="btn btn-info" id="addAnotherUnit" style="display: inline-block;"><i class="fa fa-plus"></i> Add Unit</a>
+                                    <a href="javascript:void(0);" class="btn btn-success" id="addAnotherUnit" style="display: inline-block;"><i class="fa fa-plus"></i> Add Unit</a>
                                 </div>
                             </fieldset>
 
@@ -592,8 +592,8 @@
 
 
                             <div class="form-navigation" style="text-align: right;">
-                                <button type="button" class="btn btn-secondary btn-previous" style="display:none;">Previous</button>
-                                <button type="button" id="submitForm" class="btn btn-primary btn-next">Next</button>
+                                <button type="button" class="btn btn-danger btn-previous" style="display:none;">Previous</button>
+                                <button type="button" id="submitForm" class="btn btn-success btn-next">Next</button>
                             </div>
                         </form>
                     </div>
@@ -666,8 +666,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary closebutton" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="saveOwner">Save</button>
+                <button type="button" class="btn btn-danger closebutton" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" id="saveOwner">Save</button>
 @*                 <button type="button" class="btn btn-success" id="addNewOwner">Add</button>
  *@            </div>
         </div>
