--- a/PMS-PropertyHapa.Staff/Views/Assests/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Assests/Index.cshtml
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="@Url.Action("Index","Assests")"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="/Home/Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Assets</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
@@ -47,7 +47,7 @@
                         </div>
 
                         <div class="right-side-header">
-                            <button class="btn btn-primary" type="button">Export to CSV</button>
+                            <button class="btn btn-success" type="button">Export to CSV</button>
                         </div>
                     </div>
                     <!-- <div class="card-header">
