--- a/PMS-PropertyHapa.Staff/Views/Calendar/OccupancyOverview.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Calendar/OccupancyOverview.cshtml
@@ -52,8 +52,8 @@
                         </div>
                     </div>
                     <div class="card-footer text-end d-flex justify-content-end">
-                        <button onclick="clearFilters()" type="button" class="btn btn-light mr-2 font-weight-bold" style="padding-left: 2.75rem  !important; padding-right: 2.75rem  !important;">Clear</button>
-                        <button onclick="applyFilters()" type="button" class="btn btn-primary font-weight-bold" style="padding-left: 2.75rem  !important; padding-right: 2.75rem  !important;">Apply</button>
+                        <button onclick="clearFilters()" type="button" class="btn btn-danger mr-2 font-weight-bold" style="padding-left: 2.75rem  !important; padding-right: 2.75rem  !important;">Clear</button>
+                        <button onclick="applyFilters()" type="button" class="btn btn-success font-weight-bold" style="padding-left: 2.75rem  !important; padding-right: 2.75rem  !important;">Apply</button>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                     <div class="card-body">
                         <div class="row d-flex justify-content-center">
                             <div class="col-auto">
-                                <button id="calendarLinkBtn" class="btn btn-primary mb-3">Get Calendar Link</button>
+                                <button id="calendarLinkBtn" class="btn btn-success mb-3">Get Calendar Link</button>
                             </div>
                             <div class="col-6 mt-1">
                                 <input id="calendarLink" class="form-control" />
