--- a/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
@@ -301,9 +301,9 @@
 
 
                             <div class="form-navigation float-end">
-                                <button type="button" class="btn btn-secondary btn-previous" style="display: none;">Previous</button>
-                                <button type="button" class="btn btn-primary btn-next">Next</button>
-                                <button type="button" class="btn btn-primary btn-submit" style="display: none;">Submit</button>
+                                <button type="button" class="btn btn-danger btn-previous" style="display: none;">Previous</button>
+                                <button type="button" class="btn btn-success btn-next">Next</button>
+                                <button type="button" class="btn btn-success btn-submit" style="display: none;">Submit</button>
                             </div>
                         </form>
                     </div>
