--- a/PMS-PropertyHapa.Staff/Views/Documents/SearchDocuments.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Documents/SearchDocuments.cshtml
@@ -11,7 +11,7 @@
                 <div class="col-12">
                     <h3>Coming Soon</h3>
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a class="home-item" href="SearchDocuments"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a class="home-item" href="/Home/Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Coming Soon</li>
                         <li class="breadcrumb-item active">Coming Soon</li>
                     </ol>
