--- a/PMS-PropertyHapa.Staff/Views/Landlord/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Landlord/Index.cshtml
@@ -21,7 +21,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="Index"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="/Home/Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Landlord</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
@@ -61,7 +61,7 @@
                                                     </div>
 
                                                     <div class="right-side-header">
-                                                        <a class="btn btn-primary" href="@Url.Action("AddLandlord","Landlord")">Add New Landlord</a>
+                                                        <a class="btn btn-success" href="@Url.Action("AddLandlord","Landlord")">Add New Landlord</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -140,7 +140,7 @@
 
                                                                                 </div>
                                                                             <div class="right-side-header" style="padding-top: 18px!important;padding-right: 27px!important;">
-                                                                                <button class="btn" style="background-color: #c9c9c9;color: black;" type="button" onclick="editLandlord(@item.OwnerId)">
+                                                                                <button class="btn btn-success" style="background-color: #c9c9c9;color: white;" type="button" onclick="editLandlord(@item.OwnerId)">
                                                                                         Edit Landlord
                                                                                     </button>
                                                                                 </div>
