--- a/PMS-PropertyHapa.Staff/Views/Lease/AddLease.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Lease/AddLease.cshtml
@@ -386,7 +386,7 @@
 
                             <fieldset id="step2" class="step-section">
                                 <div class="container my-4">
-                                    <button type="button" class="btn btn-primary mb-3" id="openAddTenantModal">Add Tenant</button>
+                                    <button type="button" class="btn btn-success mb-3" id="openAddTenantModal">Add Tenant</button>
                                     <table class="table table-striped" id="tenantList">
                                         <thead>
                                             <tr>
@@ -446,7 +446,7 @@
                                         <div id="rentChargesContainer">
                                             <!-- Existing rent charge entry will be cloned from here -->
                                         </div>
-                                        <button type="button" class="btn btn-primary" id="addAnotherCharge">+</button>
+                                        <button type="button" class="btn btn-success" id="addAnotherCharge">+</button>
                                     </div>
                                 </div>
                             </fieldset>
@@ -484,7 +484,7 @@
                                         <div class="text-left my-3">
                                             <div class="row">
                                                 <div class="col-12 d-flex justify-content-start ml-3">
-                                                    <button type="button" class="btn btn-primary" id="addSecurityDeposit">+</button>
+                                                    <button type="button" class="btn btn-success" id="addSecurityDeposit">+</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -559,7 +559,7 @@
                                                     <div id="feeChargesContainer">
                                                         <!-- Existing fee charge entries will be cloned from here -->
                                                     </div>
-                                                    <button type="button" class="btn btn-primary" id="addAnotherFee">+</button>
+                                                    <button type="button" class="btn btn-success" id="addAnotherFee">+</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -599,7 +599,7 @@
                                 <div id="signaturePadSection" style="display:none;" class="text-center mt-4">
                                     <p>Sign Below:</p>
                                     <canvas id="signatureCanvas" width="400" height="200" style="border:1px solid #ccc;"></canvas>
-                                    <button type="button" id="clearSignature" class="btn btn-secondary mt-2">Clear</button>
+                                    <button type="button" id="clearSignature" class="btn btn-danger mt-2">Clear</button>
                                 </div>
                                 <input type="hidden" id="SignatureImagePath">
                             </fieldset>
@@ -628,8 +628,8 @@
 
 
                             <div class="form-navigation" style="text-align: right;">
-                                <button type="button" class="btn btn-secondary btn-previous" style="display:none;">Previous</button>
-                                <button type="button" id="submitForm" class="btn btn-primary btn-next">Next</button>
+                                <button type="button" class="btn btn-danger btn-previous" style="display:none;">Previous</button>
+                                <button type="button" id="submitForm" class="btn btn-success btn-next">Next</button>
                             </div>
                         </form>
                     </div>
