--- a/PMS-PropertyHapa.Staff/Views/Lease/DownloadInvoice.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Lease/DownloadInvoice.cshtml
@@ -15,7 +15,7 @@
         </div>
     </div>
 
-    <button class="btn btn-danger mb-3" id="pdf">PDF</button>
+    <button class="btn btn-success mb-3" id="pdf">PDF</button>
 
     <div class="card" id="download">
         <div class="card-body">
