--- a/PMS-PropertyHapa.Staff/Views/Reports/TaskReports.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Reports/TaskReports.cshtml
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="TaskReports"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="/Home/Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Task</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
@@ -70,16 +70,16 @@
                         </div>
                     </div>
                     <div class="card-footer text-end d-flex justify-content-end">
-                        <button onclick="clearFilters()" type="button" class="btn btn-light mr-2 font-weight-bold" style="padding-left: 2.75rem  !important; padding-right: 2.75rem  !important;">Clear</button>
-                        <button onclick="applyFilters()" type="button" class="btn btn-primary font-weight-bold" style="padding-left: 2.75rem  !important; padding-right: 2.75rem  !important;">Apply</button>
+                        <button onclick="clearFilters()" type="button" class="btn btn-danger mr-2 font-weight-bold" style="padding-left: 2.75rem  !important; padding-right: 2.75rem  !important;">Clear</button>
+                        <button onclick="applyFilters()" type="button" class="btn btn-success font-weight-bold" style="padding-left: 2.75rem  !important; padding-right: 2.75rem  !important;">Apply</button>
                     </div>
                     <div class="card-body">
                         <div class="d-flex justify-content-start mb-3">
-                            <button id="copyButton" class="btn btn-secondary mr-1">Copy</button>
-                            <button id="csvButton" class="btn btn-secondary mr-1">CSV</button>
-                            <button id="excelButton" class="btn btn-secondary mr-1">Excel</button>
-                            <button id="pdfButton" class="btn btn-secondary mr-1">PDF</button>
-                            <button id="printButton" class="btn btn-secondary mr-1">Print</button>
+                            <button id="copyButton" class="btn btn-success mr-1">Copy</button>
+                            <button id="csvButton" class="btn btn-success mr-1">CSV</button>
+                            <button id="excelButton" class="btn btn-success mr-1">Excel</button>
+                            <button id="pdfButton" class="btn btn-success mr-1">PDF</button>
+                            <button id="printButton" class="btn btn-success mr-1">Print</button>
                         </div>
                         <div class="table-responsive">
                             <table class="table" id="taskReportsTbl">
