--- a/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
@@ -53,7 +53,7 @@
                                                     </div>
 
                                                     <div class="right-side-header">
-                                                        <button class="btn btn-primary" id="newAccountTypeBtn">New Account Type</button>
+                                                        <button class="btn btn-success" id="newAccountTypeBtn">New Account Type</button>
                                                     </div>
 
                                                 </div>
@@ -77,7 +77,7 @@
                                                                         <div class="dropdown-basic">
                                                                             <div class="dropdown">
                                                                                 <div class="btn-group mb-0">
-                                                                                    <button class="dropbtn btn-danger" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
+                                                                                    <button class="dropbtn btn-success" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
                                                                                     <div class="dropdown-content">
                                                                                         <a class="btn btn-secondary" onclick="editAccountType(@item.AccountTypeId)">
                                                                                             <i class="fa fa-edit"></i> Edit
@@ -123,8 +123,8 @@
                         <input type="text" class="form-control" name="accountTypeName" id="accountTypeName" placeholder="Account Type Name" required>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary" id="saveBtn">Save</button>
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-success" id="saveBtn">Save</button>
                     </div>
                 </div>
             </form>
