--- a/PMS-PropertyHapa.Staff/Views/Accounting/AssestExpense.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/AssestExpense.cshtml
@@ -47,7 +47,7 @@
 
                         <div class="right-side-header">
                             <!-- Button to Open the Modal -->
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newExpenseModal">
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#newExpenseModal">
                                 Create Assest Expense
                             </button>
 
@@ -228,8 +228,8 @@
                         <input type="file" class="form-control" id="documentFile" name="documentFile" />
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary" id="saveBtn">Save</button>
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-success" id="saveBtn">Save</button>
                     </div>
             </form>
 
