--- a/PMS-PropertyHapa.Staff/Views/Accounting/Billing.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Billing.cshtml
@@ -45,7 +45,7 @@
 
                         <div class="right-side-header">
                             <!-- Button to Open the Modal -->
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newBillingModal">
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#newBillingModal">
                                 Create Bill
                             </button>
 
@@ -206,8 +206,8 @@
                         <input type="file" class="form-control" id="documentFile" name="documentFile" />
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-primary" id="saveBtn">Save</button>
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-success" id="saveBtn">Save</button>
                     </div>
             </form>
 
