--- a/PMS-PropertyHapa.Staff/Views/Accounting/Deposit.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Deposit.cshtml
@@ -44,7 +44,7 @@
 
                         <div class="right-side-header">
                             <!-- Button to Open the Modal -->
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bankDepositModal">
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#bankDepositModal">
                                 Bank Deposit
                             </button>
 
@@ -232,8 +232,8 @@
                             <label for="printDepositSlip">Print Deposit Slip</label>
                         </div>
                         <div class="form-group d-flex justify-content-end">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-primary">Save</button>
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-success">Save</button>
                         </div>
                     </form>
                 </div>
