--- a/PMS-PropertyHapa.Staff/Views/Accounting/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Index.cshtml
@@ -11,7 +11,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="Index"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="/Home/Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Accounting</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
