--- a/PMS-PropertyHapa.Staff/Views/Budget/DuplicateBudget.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Budget/DuplicateBudget.cshtml
@@ -185,7 +185,7 @@
                                 <div class="row gx-3 mb-3 mr-1 justify-content-end">
                                     <div class="col-auto d-flex justify-content-end" style="padding-top:25px!important">
                                         <input type="button" value="Discard" id="discardButton" class="btn btn-default" />
-                                        <input onclick="getTableData()" type="submit" value="Submit" class="btn btn-warning" />
+                                        <input onclick="getTableData()" type="submit" value="Submit" class="btn btn-success" />
 
                                     </div>
                                 </div>
