--- a/PMS-PropertyHapa.Staff/Views/Communication/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/Index.cshtml
@@ -19,7 +19,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="@Url.Action("Index", "Communication")"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="/Home/Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Communication</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
@@ -34,14 +34,14 @@
                         <div class="card-header d-flex justify-content-between align-items-center">
                          
                             <div class="d-flex justify-content-start mb-3">
-                                <button id="copyButton" class="btn btn-secondary mr-1">Copy</button>
-                                <button id="csvButton" class="btn btn-secondary mr-1">CSV</button>
-                                <button id="excelButton" class="btn btn-secondary mr-1">Excel</button>
-                                <button id="pdfButton" class="btn btn-secondary mr-1">PDF</button>
-                                <button id="printButton" class="btn btn-secondary mr-1">Print</button>
+                                <button id="copyButton" class="btn btn-success mr-1">Copy</button>
+                                <button id="csvButton" class="btn btn-success mr-1">CSV</button>
+                                <button id="excelButton" class="btn btn-success mr-1">Excel</button>
+                                <button id="pdfButton" class="btn btn-success mr-1">PDF</button>
+                                <button id="printButton" class="btn btn-success mr-1">Print</button>
                             </div>
                             <div class="right-side-header">
-                                <a class="btn btn-primary d-flex border-0 align-items-center" href="@Url.Action("AddCommunication", "Communication")">
+                                <a class="btn btn-success d-flex border-0 align-items-center" href="@Url.Action("AddCommunication", "Communication")">
                                     Add New Communication
                                 </a>
                             </div>
@@ -108,7 +108,7 @@
                                                 </td>
 
                                                 <td style="justify-content:center">
-                                                    <button onclick="editCommunication(@communication.Communication_Id)" class="btn btn-info btn-sm" style="padding: 3px 8px; margin-right: 5px; display: inline-block;">Edit</button>
+                                                    <button onclick="editCommunication(@communication.Communication_Id)" class="btn btn-success btn-sm" style="padding: 3px 8px; margin-right: 5px; display: inline-block;">Edit</button>
                                                     <button onclick="deleteCommunication(@communication.Communication_Id)" class="btn btn-danger btn-sm" style="padding: 3px 8px; display: inline-block;">Delete</button>
                                                 </td>
                                             </tr>
