--- a/PMS-PropertyHapa.Staff/Views/Communication/TiwiloView.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/TiwiloView.cshtml
@@ -49,7 +49,7 @@
                                             </div>
                                             <div class="row gx-3 mb-3">
                                                 <div class="col-md-6">
-                                                    <button id="saveButton" class="btn btn-primary">Save</button>
+                                                    <button id="saveButton" class="btn btn-success">Save</button>
                                                 </div>
                                             </div>
                                         </div>
