--- a/PMS-PropertyHapa.Staff/Views/Lease/InvoiceDetails.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Lease/InvoiceDetails.cshtml
@@ -28,20 +28,20 @@
             <div class="card-body">
                 <div class="d-flex justify-content-start">
                     <div class="mr-5">
-                        <h3><b>Paid</b></h3>
-                        <h3 style="color: royalblue">@ViewBag.Paid</h3>
+                        <h3><b>Paid Invoice</b></h3>
+                        <h3 class="text-center" style="color: royalblue">@ViewBag.Paid</h3>
                     </div>
                     <div class="mr-5">
-                        <h3><b>Paid To Owner</b></h3>
-                        <h3 style="color: royalblue">@ViewBag.OwnerPaid</h3>
+                        <h3><b>Owner Payment</b></h3>
+                        <h3 class="text-center" style="color: royalblue">@ViewBag.OwnerPaid</h3>
                     </div>
                     <div class="mr-5">
-                        <h3><b>Un-Paid</b></h3>
-                        <h3 style="color: red;">@ViewBag.UnPaid</h3>
+                        <h3><b>Un-Paid Invoice</b></h3>
+                        <h3 class="text-center" style="color: red;">@ViewBag.UnPaid</h3>
                     </div>
                     <div class="mr-5">
-                        <h3><b>Un-Paid To Owner</b></h3>
-                        <h3 style="color: red;">@ViewBag.OwnerUnPaid</h3>
+                        <h3><b>Owner Due Payments</b></h3>
+                        <h3 class="text-center" style="color: red;">@ViewBag.OwnerUnPaid</h3>
                     </div>
                 </div>
             </div>
@@ -88,8 +88,8 @@
                                                 @{
                                                     var leaseId = Model.Select(x => x.LeaseId).FirstOrDefault();
                                                     // var leaseId = Model?.FirstOrDefault()?.LeaseId;
-                                                    <input type="button" class="btn btn-primary mb-2 ml-2" value="All Invoice Paid" onclick="AllInvoicePaid(@leaseId);" />
-                                                    <input type="button" class="btn btn-primary mb-2" value="All Invoice Paid to Owner" onclick="AllInvoicePaidToOwner(@leaseId);" />
+                                                    <input type="button" class="btn btn-success mb-2 ml-2" value="All Invoice Paid" onclick="AllInvoicePaid(@leaseId);" />
+                                                    <input type="button" class="btn btn-success mb-2" value="All Invoice Paid to Owner" onclick="AllInvoicePaidToOwner(@leaseId);" />
                                                    
                                                 }
 
@@ -139,10 +139,10 @@
                                                                         }
                                                                     </td>
                                                                     <td class="tableFontSize">
-                                                                        <input type="button" value="Invoice Paid" onclick="PaidInvoice(@item.InvoiceId);" class="btn btn-primary" />
+                                                                        <input type="button" value="Invoice Paid" onclick="PaidInvoice(@item.InvoiceId);" class="btn btn-success" />
                                                                     </td>
                                                                     <td class="tableFontSize">
-                                                                        <input type="button" value="Invoice Paid to Owner" onclick="PaidInvoiceToOwner(@item.InvoiceId);" class="btn btn-primary" />
+                                                                        <input type="button" value="Invoice Paid to Owner" onclick="PaidInvoiceToOwner(@item.InvoiceId);" class="btn btn-success" />
                                                                     </td>
                                                                     <td class="tableFontSize">
                                                                         @Html.ActionLink("Download Invoice", "DownloadInvoice", new { id = item.InvoiceId })
