--- a/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
@@ -58,7 +58,7 @@
                                          src="@(string.IsNullOrEmpty(Model?.Picture) ? "https://bootdey.com/img/Content/avatar/avatar1.png" : $"{Model?.Picture}")"
                                          alt="" style="width: 140px;">
                                     <div class="font-italic text-muted mb-4"></div>
-                                    @Html.EditorFor(model => model.PictureUrl, new { htmlAttributes = new {  @id="PictureUrl",@class = "btn btn-primary", @type="file", @accept="image/*", @required="required", @style="width: 219px;"} })
+                                    @Html.EditorFor(model => model.PictureUrl, new { htmlAttributes = new { @id = "PictureUrl", @class = "btn btn-success", @type = "file", @accept = "image/*", @required = "required", @style = "width: 219px;" } })
                                 </div>
                             </div>
 
@@ -603,7 +603,7 @@
                                     <br />
                                     <div class="col-sm-6 col-md-3">
                                         <div class="mb-3">
-                                            <button type="button" id="saveButton" class="btn btn-primary" onclick="checkValidationsAndSubmit(event)">
+                                            <button type="button" id="saveButton" class="btn btn-success" onclick="checkValidationsAndSubmit(event)">
                                                 @(Model?.TenantId == null ? "Add" : "Update") Tenant
                                             </button>
                                         </div>
